# OpenMrnaVaxGen

./: .dockerignore  .gitignore  Dockerfile  ESSENTIAL_COMMANDS  LINKS  README.md  app.py  docker-compose.yml  entrypoint.sh  main.py  plan.md  pyproject.toml
scripts/: candidate_ranking.py  download_data.py  download_reference.py  epitope_ordering.py  hla_typing.py  mrna_design.py  neoantigen_binding.py  neoantigen_peptides.py  neoantigen_prediction.py  paths.py  preprocess.py  report_generate.py  variant.py
