[project]
name = "melanoma-pipeline"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "biopython>=1.81",
    "pysam>=0.22.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "mhcflurry>=2.1.5",
    "setuptools<82",
    "tensorflow>=2.20.0",
    "vaxpress>=0.9",
    "transformers>=5.3.0",
    "torch>=2.10.0",
    "sentencepiece>=0.2.1",
    "reportlab>=4.0.0",
    "streamlit>=1.35.0",
    "linearfold-unofficial>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/melanoma_pipeline"]
